<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>lsp</artifactId>
	<name>LSP</name>
	<description>VDMJ LSP Server</description>
	
	<parent>
		<groupId>dk.au.ece.vdmj</groupId>
		<artifactId>vdmj-suite</artifactId>
		<version>${revision}${sha1}${changelist}</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<developers>
		<developer>
			<id>NickBattle</id>
			<name>Nick Battle</name>
			<email>nick.battle@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>dk.au.ece.vdmj</groupId>
			<artifactId>vdmj</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<archive>
								<manifestEntries>
									<Main-Class>lsp.LSPServerSocket</Main-Class>
									<Implementation-Version>${project.version} build ${maven.build.timestamp}</Implementation-Version>
									<Class-Path>.</Class-Path>
								</manifestEntries>
							</archive>
							<finalName>
								${project.artifactId}-${project.version}-${maven.build.timestamp}
							</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
